respect absolute paths for mozilla profile, fdo#45171, lp#919659

Change-Id: I536238f1f3b05e0a942caa1f65444688d4d36704
(cherry picked from commit fff2d18a08a37c0fa6a370e56591117fc08664d2)

Signed-off-by: Michael Stahl <mstahl@redhat.com>